--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,18 @@
        android:layout_height="match_parent">
 
        <com.google.android.material.appbar.AppBarLayout
+           android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
-           <androidx.appcompat.widget.Toolbar
-               android:id="@+id/toolbar"
+           <com.google.android.material.appbar.MaterialToolbar
+               android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
+               app:title="Tool bar"
+               app:navigationIcon="@drawable/ic_baseline_menu_24"
+               style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:background="@android:color/transparent"
-
-               />
+               android:elevation="0dp" />
        </com.google.android.material.appbar.AppBarLayout>
 
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
