--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <androidx.coordinatorlayout.widget.CoordinatorLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
 
-       <com.google.android.material.appbar.AppBarLayout
-           android:id="@+id/topbar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <com.google.android.material.appbar.MaterialToolbar
-               android:id="@+id/topAppBar"
-               android:layout_width="match_parent"
-               android:layout_height="?attr/actionBarSize"
-               app:title="Tool bar"
-               app:navigationIcon="@drawable/ic_baseline_menu_24"
-               style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
-               android:background="@android:color/transparent"
-               android:elevation="0dp" />
-       </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-   </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph_navigation_drawer" />
+
+    </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         app:menu="@menu/drawer_menu"
-        android:layout_gravity="start"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="start" />
+
+
 </androidx.drawerlayout.widget.DrawerLayout>
